--- a/public/main.html
+++ b/public/main.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html ng-app="DashApp">
-<head>
-	<title>DashBoard</title>
-	<base href="/">
-	<link rel="stylesheet" type="text/css" href="src/bootstrap.min.css">
-</head>
-<body>
-<div class ="container">
-	<div class="page-header">
-		<h1>DashBoard: {{message}}</h1>
-	</div>
-</div>
-	<script src="lib/jquery/dist/jquery.min.js"></script>
-	<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="lib/angular/angular.min.js"></script>
-	<script src="src/app.js"></script>
-</body>
+    <head>
+        <title>DashBoard</title>
+        <base href="/">
+        <link rel="stylesheet" type="text/css" href="src/bootstrap.min.css">
+         <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="page-header">
+                <h1>DashBoard</h1>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12" ng-view></div>
+            </div>
+        </div>
+        <script src="lib/jquery/dist/jquery.min.js"></script>
+        <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="lib/angular/angular.min.js"></script>
+        <script src="lib/angular-route/angular-route.min.js"></script>
+        <script src="lib/angular-resource/angular-resource.min.js"></script>
+        <script src="src/app.js"></script>
+        <script src="src/controllers.js"></script>
+		<script src="src/factories.js"></script>
+		<script src="src/filters.js"></script>
+		
+
+
+
+
+    </body>
 </html>
